--- a/cards-app/src/components/PlayTable/PlayTable.module.scss
+++ b/cards-app/src/components/PlayTable/PlayTable.module.scss
@@ -17,9 +17,10 @@
     background-image: $backgroundPatern;
     background-repeat: no-repeat;
 
-    @include screen-range(200px, 426px) {
+    @include screen-range(200px, 430px) {
       background-image: $backgroundPaternMobile;
-      left: 2%;
+      background-size: 100%;
+      left: 0%;
     }
   }
 
@@ -27,25 +28,34 @@
     float: left;
     position: absolute;
     top: calc(4% - 10px);
-    left: calc(3% - 10px);
+    left: calc(2.8% - 8.8px);
     z-index: 1;
 
     @include screen-range(200px, 426px) {
       top: 6%;
       left: 8%;
     }
+
+    @include screen-maxHeight(740px) {
+      top: 3%;
+      left: 2%;
+    }
+
+    @include screen-xs {
+      top: 6%;
+      left: 7.2%;
+    }
   }
 
   .centerContainer {
-    @include flex-container(center, center);
+    @include flex-container(center, center, row);
     height: auto;
     position: absolute;
     z-index: 1;
-    top: 32.5%;
-    left: 33%;
+    top: 32.9%;
 
     @include screen-lg {
-      
+      left: 33%;
     }
     @include screen-md {
       left: 25%;
@@ -57,16 +67,30 @@
       left: 25%;
     }
     @include screen-xs {
-      top: 28%;
+      top: 281.5px;
+      left: 32%;
+    }
+    @include screen-maxHeight(440px) {
+      top: 1%;
+      left: 30%;
+    }
+    @include mobileFlipMax(375px, 667px) {
       left: 20%;
+      top: 120px;
+    }
+    @include mobileFlipMax(360px, 740px) {
+      top: 180px;
+    }
+    @include mobileFlipMax(540px, 720px) {
+      top: 120px;
     }
 
     .deckContainer {
-      position: absolute;
+      position: relative;
       object-fit: cover;
 
       @include screen-lg {
-        left: 145%;
+        left: 149.6%;
       }
       @include screen-md {
         left: 150%;
@@ -78,32 +102,47 @@
         left: 110%;
       }
       @include screen-xs {
-        left: 120%;
+        left: 207.5px;
+      }
+      @include tabletMax(540px, 720px) {
+        left: 125%;
+        top: 23px;
       }
 
       img {
-        @include cardSize;
-        box-shadow: $cardsShadowMiddle;
+        @include cardStyle;
+        box-shadow: $deckShadow;
       }
     }
 
     .middleContainer {
       position: relative;
+      box-shadow: 29px 45px 19px 0 rgba(0, 0, 0, 0.24);
+      padding: 0;
+
+      @include screen-xs {
+        top: 21px;
+        left: 15px;
+      }
 
       img {
-        @include cardSize;
-        box-shadow: $cardsShadowMiddle;
+        position: absolute;
+        @include cardStyle;
+        box-shadow: $middleCardsShadow1;
+        transform: rotate(0deg);
+        top: -144px;
+        left: -196px;
 
         &:nth-child(2) {
           z-index: 1;
           transform: rotate(0deg);
-          margin-left: -195px;
+          box-shadow: $middleCardsShadow2;
         }
 
         &:nth-child(3) {
           z-index: 2;
           transform: rotate(-16deg);
-          margin-left: -198px;
+          box-shadow: $middleCardsShadow3;
         }
       }
     }
