--- a/cards-app/src/components/TableStart/TableStart.module.scss
+++ b/cards-app/src/components/TableStart/TableStart.module.scss
@@ -1,56 +1,35 @@
 @import "theme/common-style";
 
 .table {
-  @include flex-container($align-items: center);
+  @include flex-container(center, center);
   mix-blend-mode: multiply;
   background-image: $backgroungFabricDescktop;
   height: 100vh;
   overflow: hidden;
+  position: relative;
 
-  .middleBox {
-    width: 980px;
-    height: 418px;
-    margin: 0.5px;
-    position: absolute;
-    top: 26.7%;
-    left: 16%;
-    padding: 0;
-    @include borderStyleBigBox;
+  .inCenter {
+    @include flex-container(center, center, column);
+    width: 67vw;
+    height: 45vh;
+    border: 1px solid $borderStartColor;
+    outline: 1px solid $borderStartColor;
+    outline-offset: 7px;
+    border-radius: 33px;
+    padding-top: 9%;
+    padding-bottom: 10%;
 
-    @include screen-range(280px, 426px) {
-      top: 20%;
-    }
-
-    .centerBorder {
-      height: 416px;
-      margin: 0.5px;
+    h1 {
+      @include flex-container(center, center);
+      margin-bottom: 17px;
       position: relative;
-      @include borderStyleMediumBox;
+      background: $textColorGradient;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
 
-      .centerContainer {
-        @include flex-container($justify-content: center);
-        height: 100%;
-        margin-top: 0px;
-        margin-bottom: 7px;
-        position: relative;
-        z-index: 1;
-
-        .inCenter {
-          width: 965px;
-          height: 100%;
-          position: relative;
-          @include borderStyleSmallBox;
-
-          h1 {
-            @include flex-container(center, center);
-            margin-top: 137px;
-            margin-bottom: 21px;
-            text-shadow: $textShadow;
-            background: $textColorGradient;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-          }
-        }
+      @include screen-maxHeight(500px) {
+        margin-top: 5%;
+        margin-bottom: 1%;
       }
     }
   }
