--- a/cards-app/src/theme/UnflippedCards/UnflippedCards.module.scss
+++ b/cards-app/src/theme/UnflippedCards/UnflippedCards.module.scss
@@ -12,7 +12,9 @@
 
     &:nth-child(2) {
       z-index: 2;
-      left: 107px;
+      top: 1px;
+      left: 93px;
+      transform: scaleY(-1);
     }
 
     &:nth-child(3) {
@@ -23,16 +25,19 @@
 
     &:nth-child(4) {
       z-index: 4;
-      left: 269px;
+      top: 0px;
+      left: 268.28px;
     }
 
     &:nth-child(5) {
       z-index: 5;
       top: 4px;
       left: 351px;
+      transform: scaleY(-1);
     }
 
     &:nth-child(6) {
+      box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.39);
       z-index: 6;
       top: 10px;
       left: 414px;
@@ -42,45 +47,155 @@
   &.left {
     width: 300px;
     height: 614px;
-    top: 29%;
-    left: -1%;
-    transform: rotate(-90deg);
+    transform: rotate(90deg);
 
     @include screen-lg {
+      top: -49.5px;
+      left: -334.08px;
     }
     @include screen-md {
+      top: -50px;
+      left: -330px;
     }
     @include screen-sm {
+      top: -57.5px;
+      left: -356px;
+    }
+    @include tablet(768px, 1024px) {
+      left: -350px;
+      top: 40px;
+    }
+    //iPad
+    @include tabletMax(820px, 1180px) {
+      right: -360px;
+      top: 110px;
+    }
+    //SurfaceDuo
+    @include tabletMax(912px, 1368px) {
+      left: -340px;
+      top: 160px;
     }
     @include screen-xs {
       display: none;
+    }
+    @include min-screen-min-width(1600px, 1100px) {
+      top: 20%;
+      left: -250px;
     }
   }
 
   &.right {
     width: 300px;
     height: 614px;
-    right: -2%;
-    top: -5%;
-    transform: rotate(90deg);
+    transform: rotate(90deg) scaleY(-1);
 
+    img {
+      @include cardStyle;
+      position: absolute;
+      top: 4px;
+      z-index: 1;
+
+      &:nth-child(2) {
+        z-index: 2;
+        top: -10px;
+        left: 93px;
+        transform: scaleY(-1);
+      }
+
+      &:nth-child(3) {
+        z-index: 3;
+        top: -2px;
+        left: 183px;
+      }
+
+      &:nth-child(4) {
+        z-index: 4;
+        top: 6.5px;
+        left: 269.28px;
+        transform: scaleY(-1);
+      }
+
+      &:nth-child(5) {
+        z-index: 5;
+        top: 7px;
+        left: 351px;
+        transform: scaleX(-1);
+      }
+
+      &:nth-child(6) {
+        z-index: 6;
+        top: -1px;
+        left: 414px;
+        box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.39);
+      }
+    }
+
+    @include screen-lg {
+      right: -345.6px;
+      top: -51.3px;
+    }
+    @include screen-md {
+      right: -330px;
+      top: -50px;
+    }
     @include screen-sm {
+      right: -356px;
+      top: -57.5px;
+    }
+    @include tablet(768px, 1024px) {
+      right: -360px;
+      top: 40px;
+    }
+    @include tabletMax(820px, 1180px) {
+      right: -360px;
+      top: 120px;
+    }
+    @include tabletMax(912px, 1368px) {
+      right: -360px;
+      top: 160px;
     }
     @include screen-xs {
       display: none;
+    }
+    @include min-screen-min-width(1600px, 1100px) {
+      top: 20%;
+      right: -250px;
     }
   }
 
   &.top {
-    left: 429px;
-    top: -185.92px;
     height: 290px;
     width: 614px;
+    left: 29.8%;
 
+    @include screen-lg {
+      top: -185.94px;
+    }
+    @include screen-md {
+      top: -185px;
+      transform: translate(-10%, 10%);
+    }
     @include screen-sm {
+      left: 188px;
+      top: -205px;
     }
     @include screen-xs {
       display: none;
+    }
+    @include tablet(768px, 1024px) {
+      left: 130px;
+      top: -140px;
+    }
+    @include tabletMax(820px, 1180px) {
+      left: 125px;
+      top: -160px;
+    }
+    @include tabletMax(912px, 1368px) {
+      top: -150px;
+    }
+    @include min-screen-min-width(1600px, 1100px) {
+      top: -50px;
+      left: 35%;
     }
   }
 }
