--- a/cards-app/src/theme/common-colors.scss
+++ b/cards-app/src/theme/common-colors.scss
@@ -61,7 +61,23 @@ $hoverButtonShadow: -3px -7px 10px rgba(222, 255, 194, 0.11),
   8px 8px 4px rgba(0, 0, 0, 0.1), 6px 6px 4px rgba(0, 0, 0, 0.1),
   2px 2px 3px rgba(0, 0, 0, 0.5);
 
-$cardsShadowMiddle: 10px 2px 4px 1px rgba(0, 0, 0, 0.22);
+$cardsShadowMiddle: 0 2px 16px 0 rgba(0, 0, 0, 0.22);
+
+$middleCardsShadow1: -6px -10px 15px 0 rgba(222, 255, 194, 0.24),
+  30px 30px 13px 0 rgba(0, 0, 0, 0.08), 26px 26px 9px 0 rgba(0, 0, 0, 0.08),
+  22px 22px 9px 0 rgba(0, 0, 0, 0.08), 20px 20px 6px 0 rgba(0, 0, 0, 0.08),
+  18px 18px 6px 0 rgba(0, 0, 0, 0.1), 16px 16px 6px 0 rgba(0, 0, 0, 0.1),
+  10px 10px 5px 0 rgba(0, 0, 0, 0.5);
+
+$middleCardsShadow2: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+
+$middleCardsShadow3: 2px 2px 3px 0 rgba(0, 0, 0, 0.24);
+
+$deckShadow: -6px -10px 15px 0 rgba(222, 255, 194, 0.04),
+  30px 30px 13px 0 rgba(0, 0, 0, 0.08), 26px 26px 9px 0 rgba(0, 0, 0, 0.08),
+  22px 22px 9px 0 rgba(0, 0, 0, 0.08), 20px 20px 6px 0 rgba(0, 0, 0, 0.08),
+  18px 18px 6px 0 rgba(0, 0, 0, 0.1), 16px 16px 6px 0 rgba(0, 0, 0, 0.1),
+  10px 10px 5px 0 rgba(0, 0, 0, 0.5);
 
 // text colors & shadows
 $textShadow: 2px 2px 7px rgba(248, 226, 184, 0.11),
@@ -84,3 +100,5 @@ $borderGradientColor: linear-gradient(
   #f5d697 67%,
   #493c1b 100%
 );
+
+$borderStartColor: rgb(186, 175, 129);
