--- a/cards-app/src/theme/UnflippedCards/UnflippedCards.module.scss
+++ b/cards-app/src/theme/UnflippedCards/UnflippedCards.module.scss
@@ -7,12 +7,10 @@
   img {
     @include cardStyle;
     position: absolute;
-    top: 4px;
     z-index: 1;
 
     &:nth-child(2) {
       z-index: 2;
-      top: 1px;
       left: 93px;
       transform: scaleY(-1);
     }
@@ -20,18 +18,15 @@
     &:nth-child(3) {
       z-index: 3;
       left: 181px;
-      top: 10px;
     }
 
     &:nth-child(4) {
       z-index: 4;
-      top: 0px;
       left: 268.28px;
     }
 
     &:nth-child(5) {
       z-index: 5;
-      top: 4px;
       left: 351px;
       transform: scaleY(-1);
     }
@@ -39,8 +34,20 @@
     &:nth-child(6) {
       box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.39);
       z-index: 6;
-      top: 10px;
       left: 414px;
+    }
+
+    @for $i from 7 through 20 {
+      &:nth-child(#{$i}) {
+        @include randomCardDraw($i + 5px);
+        box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.39);
+        z-index: $i + 1;
+        left: ((($i - 2) * 70px) + 156.5px);
+
+        @include screen-xs {
+          display: none;
+        }
+      }
     }
   }
 
@@ -92,39 +99,33 @@
     img {
       @include cardStyle;
       position: absolute;
-      top: 4px;
       z-index: 1;
 
       &:nth-child(2) {
         z-index: 2;
-        top: -10px;
         left: 93px;
         transform: scaleY(-1);
       }
 
       &:nth-child(3) {
         z-index: 3;
-        top: -2px;
         left: 183px;
       }
 
       &:nth-child(4) {
         z-index: 4;
-        top: 6.5px;
         left: 269.28px;
         transform: scaleY(-1);
       }
 
       &:nth-child(5) {
         z-index: 5;
-        top: 7px;
         left: 351px;
         transform: scaleX(-1);
       }
 
       &:nth-child(6) {
         z-index: 6;
-        top: -1px;
         left: 414px;
         box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.39);
       }
