--- a/src/theme/Toast/Toast.module.scss
+++ b/src/theme/Toast/Toast.module.scss
@@ -34,6 +34,10 @@
   font-size: 2.2rem;
   font-weight: bold;
   text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
+
+  @include screen-xs {
+    font-size: 1rem;
+  }
 }
 
 @keyframes slideIn {
