--- a/src/theme/UnflippedCards/UnflippedCards.module.scss
+++ b/src/theme/UnflippedCards/UnflippedCards.module.scss
@@ -8,6 +8,7 @@
     @include cardStyle;
     position: absolute;
     z-index: 1;
+    box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.39);
 
     &:nth-child(2) {
       z-index: 2;
