--- a/src/components/PlayTable/PlayTable.module.scss
+++ b/src/components/PlayTable/PlayTable.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   min-height: 100vh;
   overflow: hidden;
-  background: $backgroundFabricDescktop;
+  background: $color-background-fabric-descktop;
 
   &BackgroundPlay {
     position: absolute;
@@ -14,11 +14,11 @@
     width: 100%;
     height: 48.187rem;
     object-fit: cover;
-    background-image: $backgroundPatern;
+    background-image: $color-background-patern;
     background-repeat: no-repeat;
 
     @include screen-range(200px, 430px) {
-      background-image: $backgroundPaternMobile;
+      background-image: $color-background-patern-mobile;
       background-size: 100%;
       left: 0%;
     }
@@ -27,19 +27,9 @@
   .exitContainer {
     float: left;
     position: absolute;
-    top: calc(4% - 10px);
-    left: calc(2.8% - 8.8px);
+    top: 30px;
+    left: 55px;
     z-index: 1;
-
-    @include screen-range(200px, 426px) {
-      top: 6%;
-      left: 8%;
-    }
-
-    @include screen-maxHeight(740px) {
-      top: 3%;
-      left: 2%;
-    }
 
     @include screen-xs {
       top: 6%;
@@ -51,7 +41,7 @@
     @include flex-container(center, center, row);
     height: auto;
     position: absolute;
-    z-index: 1;
+    z-index: 0;
     top: 32.9%;
 
     @include screen-lg {
@@ -88,7 +78,6 @@
     .deckContainer {
       position: relative;
       object-fit: cover;
-      z-index: 2;
 
       @include screen-lg {
         left: 149.6%;
@@ -112,8 +101,7 @@
 
       img {
         @include cardStyle;
-        box-shadow: $deckShadow;
-        z-index: 2;
+        box-shadow: $color-deck-shadow;
       }
     }
   }
