--- a/src/theme/Toast/Toast.module.scss
+++ b/src/theme/Toast/Toast.module.scss
@@ -7,7 +7,7 @@
   transform: translate(-50%, -50%);
   width: 30%;
   height: auto;
-  color: $toast;
+  color: $color-toast;
   padding: 20px;
   border-radius: 37px;
   border: 1px solid;
@@ -15,14 +15,14 @@
   outline-offset: 7px solid;
   text-align: center;
   z-index: 9999;
-  background: $errorColor;
+  background: $color-error;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
   animation: slideIn 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) forwards,
     fadeOut 0.5s 2.5s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
   opacity: 0;
 
   &.error {
-    background: $errorColor;
+    background: $color-error;
   }
 
   &.hidden {
