--- a/src/theme/common-style.scss
+++ b/src/theme/common-style.scss
@@ -30,20 +30,20 @@
     background-repeat: no-repeat;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: -1;
     opacity: 0.43;
   }
 
   &::before {
     top: 0;
     height: 35%;
-    background-image: $gradientUp;
+    background-image: $color-gradient-up;
   }
 
   &::after {
     bottom: 0px;
     height: 35%;
-    background-image: $gradientDown;
+    background-image: $color-gradient-down;
   }
 }
 
@@ -64,12 +64,12 @@
 
   &::before {
     left: 0px;
-    background-image: $gradientLeft;
+    background-image: $color-gradient-left;
   }
 
   &::after {
     right: 0px;
-    background-image: $gradientRight;
+    background-image: $color-gradient-right;
   }
 }
 
